--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/LogPanelControlPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/LogPanelControlPanel.form
@@ -583,7 +583,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Search"/>
+              <text value="Sea&amp;rch"/>
             </properties>
           </component>
           <hspacer id="22f5b">
