--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/UddiRegistryPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/UddiRegistryPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="912" height="598"/>
+      <xy x="48" y="54" width="789" height="505"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -182,7 +182,7 @@
               <text value="Use Client &amp;Authentication"/>
             </properties>
           </component>
-          <grid id="8bb82" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="8bb82" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -207,11 +207,6 @@
                 </constraints>
                 <properties/>
               </component>
-              <hspacer id="f048b">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </hspacer>
             </children>
           </grid>
           <component id="24331" class="javax.swing.JCheckBox" binding="metricsEnabledCheckBox" default-binding="true">
@@ -435,7 +430,10 @@
           </grid>
           <vspacer id="5e787">
             <constraints>
-              <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="0"/>
+                <preferred-size width="-1" height="20"/>
+              </grid>
             </constraints>
           </vspacer>
           <component id="33e84" class="javax.swing.JLabel" binding="plaintextPasswordWarningLabel">
